Bug fix: Ignore all but the first test failure (JMOCK-30)
Bug fix: Builder disallowed methods defined in Object class
DefaultResultStub returns value for Object return type
Improved error messages
Can set description of IsAnything and IsNothing constraints
Added IsNothing constraint
Added exactly(n) expectation to expect an invocation an exact number of times.

* 1.0.1

Improved error messages

* 1.0.0

Moved StubSequence into org.jmock.stub package
Added NOT_NULL constraint constant to MockObjectSupportTestCase

* 1.0.0RC1 - first semistable release