@@ -5,73 +5,27 @@ package org.jmock.core;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.ListIterator;
+import java.util.List;
 import org.jmock.core.stub.TestFailureStub;
 
 
 public class LIFOInvocationDispatcher
-        implements InvocationDispatcher
+    extends AbstractInvocationDispatcher
 {
-    public static final String NO_EXPECTATIONS_MESSAGE = "No expectations set";
-
-    private ArrayList invokables = new ArrayList();
-    private Stub defaultStub = new TestFailureStub("unexpected invocation");
-
-    public Object dispatch( Invocation invocation ) throws Throwable {
-        ListIterator i = invokables.listIterator(invokables.size());
-        while (i.hasPrevious()) {
-            Invokable invokable = (Invokable)i.previous();
-            if (invokable.matches(invocation)) {
-                return invokable.invoke(invocation);
+    protected Iterator dispatchOrder( List invokables ) {
+        final ListIterator i = invokables.listIterator(this.invokables.size());
+        return new Iterator() {
+            public boolean hasNext() {
+                return i.hasPrevious();
             }
-        }
 
-        return defaultStub.invoke(invocation);
-    }
-
-    public void setDefaultStub( Stub defaultStub ) {
-        this.defaultStub = defaultStub;
-    }
-
-    public void add( Invokable invokable ) {
-        invokables.add(invokable);
-    }
-
-    public void verify() {
-        Iterator i = invokables.iterator();
-        while (i.hasNext()) {
-            ((Verifiable)i.next()).verify();
-        }
-    }
-
-    public void clear() {
-        invokables.clear();
-    }
-
-    public StringBuffer describeTo( StringBuffer buffer ) {
-        if (anyInvokableHasDescription()) {
-            writeInvokablesTo(buffer);
-        } else {
-            buffer.append(NO_EXPECTATIONS_MESSAGE);
-        }
-
-        return buffer;
-    }
-
-    private void writeInvokablesTo( StringBuffer buffer ) {
-        Iterator iterator = invokables.iterator();
-        while (iterator.hasNext()) {
-            Invokable invokable = (Invokable)iterator.next();
-            if (invokable.hasDescription()) {
-                invokable.describeTo(buffer).append("\n");
+            public Object next() {
+                return i.previous();
             }
-        }
-    }
 
-    private boolean anyInvokableHasDescription() {
-        Iterator iterator = invokables.iterator();
-        while (iterator.hasNext()) {
-            if (((Invokable)iterator.next()).hasDescription()) return true;
-        }
-        return false;
+            public void remove() {
+                throw new UnsupportedOperationException("immutable list");
+            }
+        };
     }
 }
