@@ -1,3 +1,5 @@
+Can give description to "expect never" to describe why invocation is not expected
+Refactored invocation dispatcher classes to remove duplication
 Bug fix: Ignore all but the first test failure (JMOCK-30)
 Bug fix: Builder disallowed methods defined in Object class
 DefaultResultStub returns value for Object return type
